fixed nav to hide overflow at small sizes for medium query

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -607,6 +607,7 @@ p {
 			div {
 				a {
 					font-size: 12px;
+					overflow: hidden;
 				}
 			}
 		}
